--- a/proyecto_2/progra_4/src/main/resources/templates/template.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/template.html
@@ -14,7 +14,7 @@
             <img src="/Imagenes/Idiomas.png" alt="Idiomas" class="IdiomasI">
             <select onchange="location = this.value;">
                 <option value="" th:text="#{Idiomas}">Idiomas (Languages)</option>
-                <option value="?lang=es" th:text="#{Español}">Español(Spanish)</option>
+                <option value="?lang=es" th:text="#{Espanol}">Español(Spanish)</option>
                 <option value="?lang=en" th:text="#{Ingles}">Inglés(English)</option>
                 <option value="?lang=fr" th:text="#{Frances}">Francés(French)</option>
             </select>
