--- a/proyecto_2/progra_4/src/main/resources/templates/FormularioEditarCliente.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/FormularioEditarCliente.html
@@ -12,10 +12,11 @@
     <div class="form-group">
         <div class="form-row" style="display: inline;">
             <h1 th:text="#{Perfil}">Configuración perfil cliente</h1>
-    <label th:text="#{Nombre}">Nombre: <input type="text" th:field="*{nombre}"></label><br><br>
-    <label th:text="#{Direccion}">Direccion: <input type="text" th:field="*{direccion}"></label><br><br>
-    <label th:text="#{Correo}">Correo: <input type="text" th:field="*{correoElectronico}"></label><br><br>
-    <select id="tipo_cliente" onchange="" th:field="*{tipoCliente}">
+            <label th:text="#{ID}">ID:</label> <input type="text" th:field="*{clienteId}" readonly><br><br>
+            <label th:text="#{Nombre}">Nombre:</label> <input type="text" th:field="*{nombre}" readonly><br><br>
+    <label th:text="#{Direccion}">Direccion:</label> <input type="text" th:field="*{direccion}"><br><br>
+    <label th:text="#{Correo}">Correo:</label> <input type="text" th:field="*{correoElectronico}"><br><br>
+    <select id="tipo_cliente" onchange="" th:field="*{tipoCliente}" disabled>
         <option value="juridica" th:text="#{TipoCedulaJuridica}">Cédula Jurídica</option>
         <option value="fisica" th:text="#{TipoCedulaFisica}">Cédula Física</option>
     </select><br><br>
