--- a/proyecto_2/progra_4/src/main/resources/templates/listarproveedor.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarproveedor.html
@@ -154,7 +154,7 @@
         </tbody>
     </table>
 
-    <a href="/ProveedorController/nuevo" class="add-link">Nuevo proveedor</a>
+    <a th:href="@{/}" class="link" style="display: block; text-align: center;">Ir a la página de inicio</a>
 </div>
 
 </body>
