--- a/proyecto_2/progra_4/src/main/resources/static/css/formularioProveedor.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/formularioProveedor.css
@@ -1,18 +1,25 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: lightskyblue;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .container {
     justify-content: center;
-    width: 75%;
-    height: 40%;
+    width: 50%;
+    height: 60vh;
+    max-height: 60vh;
     background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    margin-bottom:50px;
+    overflow-y: visible;
 }
 
 h1 {
@@ -24,29 +31,30 @@ h1 {
 form {
     display: grid;
     gap: 10px;
+    width: 60%; /* Reducir el tamaño del formulario */
+    margin: auto; /* Ajustar margen superior e inferior */
+    overflow: hidden;
 }
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
+
 
 .card {
     flex-grow: 1;
-
     margin: 10px;
-
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 10px;
+    box-shadow: none;
+    overflow-y: auto; /* Agregar scroll vertical */
+    max-height: 60vh; /* Altura máxima del contenedor */
+    width: 50%; /* Ancho del contenedor */
 }
+
 label {
     font-weight: bold;
 }
 
 input[type="text"] {
-    width: 100%;
+    width: 50%;
     padding: 8px;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -60,6 +68,7 @@ button[type="submit"] {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-top: 20px; /* Ajustar margen superior del botón */
 }
 
 button[type="submit"]:hover {
@@ -76,4 +85,12 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+select#tipoProveedor{
+    width:40%;
+}
+
+select#actividadComercial{
+    width:40%;
 }
