--- a/proyecto_2/progra_4/src/main/resources/templates/listarproveedor.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarproveedor.html
@@ -8,7 +8,7 @@
 </head>
 <header th:replace="/template :: header"></header>
 <body>
-
+<main>
 <div class="container">
     <h1 th:text="#{ListadoProvedores}">Listado de Proveedores</h1>
 
@@ -16,7 +16,7 @@
     <div th:if="${error}" class="alert alert-danger" role="alert">
         <p th:text="${error}"></p>
     </div>
-
+    <div class="table-container">
     <table>
         <thead>
         <tr>
@@ -47,10 +47,11 @@
         </tr>
         </tbody>
     </table>
-
+    </div>
     <a href="/LoginController/inicio" class="add-link" th:text="#{Regresar}">Regresar</a>
-</div>
 
+</div>
+</main>
 </body>
 <footer th:replace="/template :: footer"></footer>
 </html>
