--- a/proyecto_2/progra_4/src/main/resources/static/css/FormularioEditarProductos.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/FormularioEditarProductos.css
@@ -7,7 +7,8 @@ body {
 }
 
 .container {
-    width: 50%;
+    width: 40%;
+    height: auto;
     margin: 20px auto;
     background-color: #fff;
     border-radius: 8px;
