--- a/proyecto_2/progra_4/src/main/resources/static/css/FormularioProductos.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/FormularioProductos.css
@@ -3,11 +3,14 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
     width: 50%;
-    margin: 20px auto;
+    margin: 105px auto;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -50,9 +53,30 @@ button[type="submit"]:hover {
     background-color: #45a049;
 }
 
+.table-container {
+    overflow-x: scroll;
+    max-height: 300px;
+}
+
+table {
+    width: 100%; /* Ajusta este valor al ancho que prefieras */
+    height: 200px; /* Ajusta este valor a la altura que prefieras */
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+}
+
+th, td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+tr:hover {
+    background-color: #f2f2f2;
+}
 
 .submit-button {
-
     padding: 10px 20px;
     margin: 5px 10px;
     background-color: #2b312d;
