--- a/proyecto_2/progra_4/src/main/resources/static/css/ListadoProductos.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/ListadoProductos.css
@@ -3,12 +3,15 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
-    margin-top: 10%;
-    margin-left: 10%;
     width: 80%;
+    /*height: 500px; !* Ajusta este valor a la altura que prefieras *!*/
+    margin: 105px auto;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -21,9 +24,17 @@ h1 {
     color: #333;
 }
 
+.table-container {
+    overflow-x: scroll;
+    max-height: 300px;
+}
+
 table {
+    width: 100%; /* Ajusta este valor al ancho que prefieras */
+    height: 200px; /* Ajusta este valor a la altura que prefieras */
     border-collapse: collapse;
-    width: 100%;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
 }
 
 th, td {
@@ -38,7 +49,6 @@ tr:hover {
 
 .button {
     padding: 5px 10px;
-    border: none;
     border-radius: 3px;
     text-align: center;
     text-decoration: none;
@@ -54,6 +64,7 @@ tr:hover {
     background-color: #4CAF50;
     color: white;
 }
+
 .id-proveedor {
     color: #637bff;
 }
