--- a/proyecto_2/progra_4/src/main/resources/static/css/ListarClientes.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/ListarClientes.css
@@ -3,12 +3,14 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
-    margin-top: 10%;
-    margin-left: 10%;
     width: 80%;
+    margin: 105px auto;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -22,8 +24,12 @@ h1 {
 }
 
 table {
+    width: 100%; /* Ajusta este valor al ancho que prefieras */
     border-collapse: collapse;
-    width: 100%;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th, td {
@@ -69,4 +75,8 @@ tr:hover {
 
 .delete-button:hover {
     background-color: #d32f2f;
+}
+.table-container{
+    overflow-x: auto;
+    max-height: 250px;
 }
