--- a/proyecto_2/progra_4/src/main/resources/static/css/ListarFacturas.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/ListarFacturas.css
@@ -3,11 +3,14 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
-    width: 80%;
-    margin: 20px auto;
+    width: 80%;/* Ajusta este valor a la altura que prefieras */
+    margin: 105px auto !important;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -21,8 +24,10 @@ h1 {
 }
 
 table {
-    border-collapse: collapse;
     width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
 }
 
 th, td {
@@ -63,4 +68,9 @@ tr:hover {
 
 .xml-button:hover {
     background-color: #065b80;
+}
+
+.table-container{
+    overflow-x: auto;
+    max-height: 300px;
 }
