--- a/proyecto_2/progra_4/src/main/resources/static/css/template.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/template.css
@@ -22,11 +22,16 @@ header {
     justify-content: flex-end;
     margin-right: 1.5%;
 }
+main{
+    flex: 1 0 auto;
+}
 footer {
+    flex-shrink: 0;
     position: absolute;
     box-sizing: border-box;
     bottom: 0;
     width: 100%;
+    margin-bottom: auto;
 }
 .logo {
     float: left;
