--- a/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
@@ -8,11 +8,13 @@
 </head>
 <header th:replace="/template :: header"></header>
 <body>
+<main>
 <div class="container">
     <h1 th:text="#{Listado}">Listado de Clientes</h1>
-    <p class="id-proveedor" th:text="#{IDP}"><b>Identificación del Provedor:</b> </p>
-        <p><span th:text="${session.id_proveedor}"></span></p>
+    <span class="id-proveedor" th:text="#{IDP}"><b>Identificación del Provedor:</b> </span>
+        <span th:text="${session.id_proveedor}"></span>
     <p th:text="#{Mensaje}" ></p><p th:if="${mensaje}" th:text="${mensaje}"></p>
+    <div class="table-container">
     <table>
         <thead>
         <tr>
@@ -40,10 +42,13 @@
                 <button type="submit" class="button" th:text="#{Agregar}">Agregar Cliente</button>
             </form>
 
-        <td><button class="button" th:onclick="'window.location.href=\'/homecontroler/ProveedorAcciones\''" th:text="#{Regresar}">Volver</button></td>
+
         </tbody>
     </table>
     </div>
+    <td><button class="button" th:onclick="'window.location.href=\'/homecontroler/ProveedorAcciones\''" th:text="#{Regresar}">Volver</button></td>
+    </div>
+</main>
 </body>
 <footer th:replace="/template :: footer"></footer>
 </html>
