--- a/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
@@ -18,8 +18,8 @@
             <label for="tipo_cliente"><span style="color: red;">*</span><span th:text="#{TipoCedula}">Tipo de Cédula</span>:</label>
             <select id="tipo_cliente" onchange="" th:field="*{tipoCliente}">
                 <option value="ninguna" th:text="#{TipoCedulaNinguna}">Tipo de cédula</option>
-                <option value="juridica" th:text="#{TipoCedulaJuridica}">Cédula Jurídica</option>
-                <option value="fisica" th:text="#{TipoCedulaFisica}">Cédula Física</option>
+                <option value="Jurídico" th:text="#{TipoCedulaJuridica}">Cédula Jurídica</option>
+                <option value="Físico" th:text="#{TipoCedulaFisica}">Cédula Física</option>
             </select><br><br>
             <label for="cedula"><span style="color: red;">*</span><span th:text="#{Cedula}">Cédula</span>:</label>
             <input type="text" id="cedula" placeholder="Cédula" name="cedula" required th:field="*{clienteId}"><br><br>
